relaxng-gen/tests/snapshots/generate_and_run__attr-solo.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<tr class="card" bool="true"/>
