relaxng-gen/tests/snapshots/generate_and_run__collapse_with_parent.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<root>
  <wordsize>31</wordsize>
</root>
