relaxng-gen/tests/snapshots/generate_and_run__recurse-inline.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<top>
  <code>
    <em>text</em>
  </code>
</top>
