relaxng-gen/tests/snapshots/generate_and_run__tuto15.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<html>
  <head>
    <title>Example Address Book</title>
  </head>
  <body>
    <table class="addressBook">
      <tr class="card">
        <td class="name">
          <span class="givenName">John</span>
          <span class="familyName">Smith</span>
        </td>
        <td class="email">js@example.com</td>
      </tr>
    </table>
  </body>
</html>
